# python-minieigen

./: CMakeLists.txt  README  setup.py
doc/: Makefile
doc/source/: conf.py
src/: CMakeLists.txt  basic-test.py  miniEigen.cpp
src/double-conversion/: README
