PROJECT(minieigen CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cMake")

FIND_PACKAGE(Boost COMPONENTS system python REQUIRED)
FIND_PACKAGE(PythonInterp REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)

IF(NOT LIBRARY_OUTPUT_PATH)   #For packaging
  SET (LIBRARY_OUTPUT_PATH "lib")
ENDIF(NOT LIBRARY_OUTPUT_PATH)   #For packaging


INCLUDE(FindPythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

ADD_LIBRARY(minieigen SHARED src/miniEigen.cpp)
SET_TARGET_PROPERTIES(minieigen
PROPERTIES
    SOVERSION 0.1
    VERSION 0.1
    OUTPUT_NAME minieigen
)
TARGET_LINK_LIBRARIES(minieigen ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})

INSTALL(TARGETS minieigen LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})
